Adding Profile view

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" id="viewsDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Views</a>
+                            <ul class="dropdown-menu" aria-labelledby="viewsDropdown">
+                                <li><a href="index.html" class="dropdown-item">Index</a></li>
+                                <li><a href="signup.html" class="dropdown-item">Sign up</a></li>
+                                <li><a href="profile.html" class="dropdown-item">Profile</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Products</a>
                         </li>
@@ -48,7 +57,8 @@
     <main>
 
         <!-- <div class="py-5" style="background-image: url('https://wallpapercave.com/wp/lRVK5Cl.jpg');"> -->
-        <div class="py-5 shadow" style="background-image: url('https://i.pinimg.com/originals/5c/33/20/5c3320ff4625e7012eedca4743aeab14.jpg'); background-size: cover;">
+        <div class="py-5 shadow"
+            style="background-image: url('https://i.pinimg.com/originals/5c/33/20/5c3320ff4625e7012eedca4743aeab14.jpg'); background-size: cover;">
             <div class="container">
                 <div class="row my-5">
                     <div class="d-flex justify-content-center my-5">
@@ -80,7 +90,7 @@
                         <h1>Forms Validation</h1>
                         <hr>
                         <p class="lead">
-                            In this site i practice form validation from side server using Spring Framework Utilities.
+                            Form validation from side server implementation using Spring Framework Utilities.
                         </p>
                     </div>
                 </div>
