--- a/signup.html
+++ b/signup.html
@@ -33,6 +33,15 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" id="viewsDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Views</a>
+                            <ul class="dropdown-menu" aria-labelledby="viewsDropdown">
+                                <li><a href="index.html" class="dropdown-item">Index</a></li>
+                                <li><a href="signup.html" class="dropdown-item">Sign up</a></li>
+                                <li><a href="profile.html" class="dropdown-item">Profile</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Products</a>
                         </li>
@@ -72,6 +81,29 @@
                                     birth</label>
                                 <div class="col-xl-9">
                                     <input type="date" class="form-control" id="username">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="country" class="col-xl-3 col-form-label required-symbol">Country</label>
+                                <div class="col-xl-9">
+                                    <select id="country" class="form-select">
+                                        <option value="">EEUU</option>
+                                        <option value="">Spain</option>
+                                        <option value="">Ireland</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="gerne" class="col-xl-3 col-form-label required-symbol">Gerne</label>
+                                <div class="col-xl-9 d-flex align-items-center">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" id="male" name="gerne" value="">
+                                        <label class="form-check-label" for="male">Male</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" id="female" name="gerne" value="">
+                                        <label class="form-check-label" for="female">Female</label>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-3">
