Adding checboxes to the Sign up form

--- a/signup.html
+++ b/signup.html
@@ -117,6 +117,44 @@
                                 </div>
                             </div>
                             <div class="row mb-3">
+                                <label for="languages" class="col-xl-3 col-form-label required-symbol">What program languages do you use?</label>
+                                
+                                <div class="col-xl-9">
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="c" value="c">
+                                        <label for="c">c</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="cpp" value="cpp">
+                                        <label for="cpp">c++</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="cshap" value="cshap">
+                                        <label for="cshap">c#</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="java" value="java">
+                                        <label for="java">Java</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="kotlin" value="kotlin">
+                                        <label for="kotlin">Kotlin</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="phyton" value="phyton">
+                                        <label for="phyton">Phyton</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="go" value="go">
+                                        <label for="go">Go</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="ruby" value="ruby">
+                                        <label for="ruby">Ruby</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
                                 <label for="email" class="col-xl-3 col-form-label required-symbol">Email</label>
                                 <div class="col-xl-9">
                                     <input type="email" class="form-control" id="email">
