Adding programming languages badges to the profile view

--- a/signup.html
+++ b/signup.html
@@ -117,7 +117,7 @@
                                 </div>
                             </div>
                             <div class="row mb-3">
-                                <label for="languages" class="col-xl-3 col-form-label required-symbol">What program languages do you use?</label>
+                                <label for="languages" class="col-xl-3 col-form-label required-symbol">What programming languages do you use?</label>
                                 
                                 <div class="col-xl-9">
                                     <div class="form-check form-check-inline">
@@ -137,8 +137,20 @@
                                         <label for="java">Java</label>
                                     </div>
                                     <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="php" value="php">
+                                        <label for="php">PHP</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
                                         <input type="checkbox" class="form-check-input" id="kotlin" value="kotlin">
                                         <label for="kotlin">Kotlin</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="swift" value="swift">
+                                        <label for="swift">Swift</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="javascript" value="javascript">
+                                        <label for="javascript">JavaScript</label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <input type="checkbox" class="form-check-input" id="phyton" value="phyton">
@@ -151,6 +163,10 @@
                                     <div class="form-check form-check-inline">
                                         <input type="checkbox" class="form-check-input" id="ruby" value="ruby">
                                         <label for="ruby">Ruby</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" id="dart" value="dart">
+                                        <label for="dart">Dart</label>
                                     </div>
                                 </div>
                             </div>
